chronograf-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chronograf-ui
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: k8s.minikube
    http:
      paths:
        - path: /chronograf
          backend:
            serviceName: chronograf
            servicePort: 8888
